--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,17 @@
 .App {
   text-align: center;
+  display:flex; 
+  flex-direction:column;
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 5vmin;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 10s linear;
+    animation: App-logo-spin infinite 10s linear ;
   }
 }
 
@@ -24,9 +26,7 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
+
 
 @keyframes App-logo-spin {
   from {
