--- a/src/Result.css
+++ b/src/Result.css
@@ -1,8 +1,13 @@
 .Result{
 display: flex;
 flex-direction: row;
-background-color: rgb(255, 255, 255);
 
+background-color: #fff;
+box-shadow: 5px 5px 20px 10px rgb(153, 153, 184);
+padding: 20px;
+justify-content: space-between;
+margin: 20px 0;
+width: 70%;
 }
 
 .Income{
@@ -14,4 +19,7 @@ background-color: rgb(255, 255, 255);
     color: red;
     margin: 20px;
 
+}
+h4{
+    color: black;
 }
