--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   text-align: center;
   display:flex; 
   flex-direction:column;
+  width: 100%;
 }
 input{
   margin: 20px;
@@ -18,6 +19,7 @@ input{
   justify-content: center;
   font-size: calc(5px + 2vmin);
   color: white;
+  min-width: 100vh;
 }
 
 
@@ -113,7 +115,7 @@ input[type='number'] {
 
 .btn {
   cursor: pointer;
-  background-color: #9c88ff;
+  background-color: #2178aa;
   box-shadow: var(--box-shadow);
   color: #fff;
   border: 0;
