Implemented deleteTransaction function

--- a/src/App.css
+++ b/src/App.css
@@ -159,7 +159,7 @@ input[type='number'] {
 
 .delete-btn {
   cursor: pointer;
-  background-color: #e74c3c;
+  background-color: #ff2007;
   border: 0;
   color: #fff;
   font-size: 20px;
